[gd_scene load_steps=6 format=3 uid="uid://dgjiyeht7bld6"]

[ext_resource type="Script" uid="uid://b5jelaj1vyajv" path="res://scripts/relic_handler/relic_handler.gd" id="1_4mcmm"]
[ext_resource type="Texture2D" uid="uid://rowvfmdfxvmf" path="res://art/arrow_small.png" id="1_f73p0"]
[ext_resource type="Texture2D" uid="uid://04c74gdpp1nc" path="res://art/arrow_small_disabled.png" id="2_4mcmm"]
[ext_resource type="Script" uid="uid://5uwgbr7vjdqk" path="res://scripts/relic_handler/relics_control.gd" id="3_dumv5"]
[ext_resource type="PackedScene" uid="uid://bxhr3gnnp3euv" path="res://scenes/relic_handler/relic_ui.tscn" id="4_dxoqm"]

[node name="RelicHandler" type="HBoxContainer"]
custom_minimum_size = Vector2(120, 16)
offset_right = 120.0
offset_bottom = 16.0
script = ExtResource("1_4mcmm")

[node name="LeftButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
texture_normal = ExtResource("1_f73p0")
texture_pressed = ExtResource("1_f73p0")
texture_hover = ExtResource("1_f73p0")
texture_disabled = ExtResource("2_4mcmm")
stretch_mode = 5
flip_h = true

[node name="RelicsControl" type="Control" parent="." node_paths=PackedStringArray("left_button", "right_button")]
clip_contents = true
custom_minimum_size = Vector2(88, 0)
layout_mode = 2
script = ExtResource("3_dumv5")
left_button = NodePath("../LeftButton")
right_button = NodePath("../RightButton")

[node name="RelicsHBox" type="HBoxContainer" parent="RelicsControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(88, 16)
layout_mode = 0
offset_right = 276.0
offset_bottom = 16.0
theme_override_constants/separation = 2

[node name="RelicUI" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI2" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI3" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI4" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI5" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI6" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI7" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI8" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI9" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI10" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI11" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI12" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI13" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RelicUI14" parent="RelicsControl/RelicsHBox" instance=ExtResource("4_dxoqm")]
layout_mode = 2

[node name="RightButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
disabled = true
texture_normal = ExtResource("1_f73p0")
texture_pressed = ExtResource("1_f73p0")
texture_hover = ExtResource("1_f73p0")
texture_disabled = ExtResource("2_4mcmm")
stretch_mode = 5
